infra/cluster/traefik-config.yaml
# traefik-middlewares.yaml

# Traefik BasicAuth Middleware
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basicauth-traefik
spec:
  basicAuth:
    secret: basicauth-secret
    removeHeader: false

---
# Traefik IP Whitelisting
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whitelist
spec:
  ipWhiteList:
    sourceRange:
      - 78.202.15.42
      - 192.168.0.48/24
