infra/cluster/sso-traefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-google-oauth
  labels:
    app: proxy-google-oauth
spec:
  selector:
    matchLabels:
      app: proxy-google-oauth
  template:
    metadata:
      labels:
        app: proxy-google-oauth
    spec:
      containers:
      - name: proxy-google-oauth
        image: bquentin19/simplon:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: proxy-google-oauth

spec:
  selector:
    app:  proxy-google-oauth
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
