infra/cluster/ingress.yaml
# Ingress creation => Route HTTPS vers escape.eisi-dune.eu
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: escape-ingress
  namespace: workshop
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: workshop-whitelist@kubernetescrd
    cert-manager.io/issuer: letsencrypt
    # cert-manager.io/issuer-kind: Issuer
    # cert-manager.io/issuer-group: cert-manager.io
spec:
  rules:
    - host: escape.eisi-dune.eu
      http:
        paths:
          - path: /
            pathType: Prefix # ImplementationSpecific
            backend:
              service:
                name: escape-service
                port:
                  number: 80
  tls: # placing a host in the TLS config will determine what ends up in the cert's subjectAlt
    - hosts:
        - escape.eisi-dune.eu
      secretName: escape-tls # cert-manager will store the created certificate in this secret
