infra/cluster/ingress_dev1.yaml
# Ingress creation
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: votingapp
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: dev-basicauth-traefik@kubernetescrd,dev-whitelist@kubernetescrd
    # cert-manager.io/issuer: letsencrypt
    # cert-manager.io/issuer-kind: Issuer
    # cert-manager.io/issuer-group: cert-manager.io
spec:
  rules:
  - host: traefik.eisi-dune.eu
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: vote-service
            port: 
              number: 80
  # tls: # placing a host in the TLS config will determine what ends up in the cert's subjectAlt
  # - hosts:
  #   - traefik.eisi-dune.eu
  #   secretName: secret-tls # cert-manager will store the created certificate in this secret.
