infra/cluster/ingress_dev3.yaml
# # Ingress creation
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: votingapp
#   annotations:
#     kubernetes.io/ingress.class: traefik
#     traefik.ingress.kubernetes.io/router.middlewares: dev-sso@kubernetescrd,dev-whitelist@kubernetescrd
#     traefik.ingress.kubernetes.io/router.entrypoints: websecure # Ligne pour spécifier l'entrée HTTPS
#     cert-manager.io/issuer: letsencrypt
#     cert-manager.io/issuer-kind: Issuer
#     cert-manager.io/issuer-group: cert-manager.io
# spec:
#   rules:
#   - host: traefik.eisi-dune.eu
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: vote-service
#             port: 
#               number: 80
#   - host: traefik.eisi-dune.eu
#     http:
#       paths:
#       - path: /_oauth
#         pathType: Prefix
#         backend:
#           service:
#             name: proxy-google-oauth
#             port: 
#               number: 8080
#   - host: traefik.eisi-dune.eu
#     http:
#       paths:
#       - path: /checkauth
#         pathType: Prefix
#         backend:
#           service:
#             name: proxy-google-oauth
#             port: 
#               number: 8080
#   - host: traefik.eisi-dune.eu
#     http:
#       paths:
#       - path: /oauth2callback
#         pathType: Prefix
#         backend:
#           service:
#             name: proxy-google-oauth
#             port: 
#               number: 8080
#   tls: # placing a host in the TLS config will determine what ends up in the cert's subjectAlt
#   - hosts:
#     - traefik.eisi-dune.eu
#     secretName: secret-tls # cert-manager will store the created certificate in this secret.

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: votingapp-tls
  namespace: dev
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.eisi-dune.eu`)
    kind: Rule
    services:
    - name: vote-service 
      port: 80
    middlewares:
        #- name: basicauth-middleware
        - name: sso
        - name: whitelist
  tls:
    secretName: secret-tls
    #options:
      #name: mtls-option

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxy-google-oauth
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.eisi-dune.eu`) && Path(`/_oauth`) # To authorize the user
    kind: Rule
    services:
    - name: proxy-google-oauth
      port: 8080
  - match: Host(`traefik.eisi-dune.eu`) && Path(`/checkauth`) # To rollback the user (when he has been identified) to the home page of the application
    kind: Rule
    services:
    - name: proxy-google-oauth
      port: 8080
  - match: Host(`traefik.eisi-dune.eu`) && Path(`/oauth2callback`) # To sent back to the authorization page if not successful
    kind: Rule
    services:
    - name: proxy-google-oauth
      port: 8080
  tls:
    secretName: secret-tls
